--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2024"
 [dependencies]
 tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
 sqlx = { version = "*",features = ["mysql","runtime-tokio-rustls"] }
-minijinja = { version = "*" }
 tera = { version = "1" }
 serde = { version = "1.0.216", features = ["derive"] }
+convert_case ={version = "*",features = ["rand"]}
