--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ tera = { version = "1" }
 serde = { version = "1.0.216", features = ["derive"] }
 convert_case ={version = "*",features = ["rand"]}
 chrono = {version = "0.4",features = ["default","serde"]}
-quick-xml={version = "0.37"}
+quick-xml={version = "0.37",features = ["tokio","encoding_rs"]}
