--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ convert_case = { version = "*", features = ["rand"] }
 chrono = { version = "0.4", features = ["default", "serde"] }
 quick-xml = { version = "0.37", features = ["tokio", "encoding_rs"] }
 inflections = { version = "1" }
-termtree  = { version = "0.5" }
+
+# print file tree crate ignore
+#termtree  = { version = "0.5" }
